--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,8 @@
         "istream": "c",
         "functional": "c",
         "tuple": "c",
-        "utility": "c"
+        "utility": "c",
+        "math.h": "c"
     },
     "files.autoSave": "afterDelay",
     "files.autoSaveDelay": 100,
