--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,8 @@
         "functional": "c",
         "tuple": "c",
         "utility": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "player.h": "c"
     },
     "files.autoSave": "afterDelay",
     "files.autoSaveDelay": 100,
